Properly implemented config file and fixed runtime error. Will be merged with 40 to fix issues on that branch.